fix(pv-stylemark): fixed html-box overflow issue
Fixed issue, where lon lines in the example-html led to an overflow

--- a/packages/pv-stylemark/ui/components/dds-example/dds-example.scss
+++ b/packages/pv-stylemark/ui/components/dds-example/dds-example.scss
@@ -85,6 +85,7 @@ dds-example {
   &__html-box-content {
     display: none;
     padding: 24px;
+    overflow-x: auto;
     background: $dds-color__black-010;
 
     .dds-state--open & {
